<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <item
        android:title="@string/search"
        android:id="@+id/searchID"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"

        />

    <item
        android:title="@string/home"
        android:id="@+id/homeID"
        android:icon="@drawable/ic_home_black_24dp"
        />
    <item
        android:title="@string/settings"
        android:id="@+id/settingsID"
        android:icon="@drawable/ic_settings_black_24dp"
        />
    <item
        android:title="@string/add_city"
        android:id="@+id/addCityID"
        android:icon="@drawable/ic_add_location_black_24dp"
        />
    <item
        android:title="@string/about"
        android:id="@+id/aboutID"
        android:icon="@drawable/ic_home_black_24dp"
        />

</menu>