<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            tools:listitem="@layout/rv_district_layout"
            android:id="@+id/districtRV"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:elevation="2dp"
            android:visibility="gone"
            android:background="@color/white"
            tools:targetApi="LOLLIPOP"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/placeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    tools:text="Dhaka"
                    android:textAppearance="@style/bigTextStyle"
                    />

                <TextView
                    android:id="@+id/tempTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/placeTV"
                    android:padding="5dp"
                    android:textAppearance="@style/bigTextStyle"
                    tools:text="32°C" />

                <ImageView
                    android:id="@+id/iconIV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tempTV"
                    android:src="@drawable/sunrise_primary"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/descriptionTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tempTV"
                    android:layout_toEndOf="@+id/iconIV"
                    android:padding="5dp"
                    tools:text="Sunny"
                    android:textAppearance="@style/bigTextStyle"
                    />


            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <androidx.cardview.widget.CardView
                    android:id="@+id/humidityCV"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@id/sunCV"
                    app:layout_constraintEnd_toStartOf="@id/windCV"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <TextView
                            android:id="@+id/humidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/mediumTextStyle"
                            android:text="@string/humidity" />

                        <TextView
                            android:id="@+id/humidityTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/bigTextStyle"
                            android:layout_below="@id/humidity"
                            tools:text="Humidity" />


                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/windCV"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@id/maxMinCV"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/humidityCV"
                    app:layout_constraintTop_toTopOf="parent">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        >

                        <TextView
                            android:id="@+id/wind"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wind"
                            android:textAppearance="@style/mediumTextStyle"
                            />

                        <TextView
                            android:id="@+id/windTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/mediumTextStyle"
                            android:layout_toEndOf="@id/wind"
                            tools:text="Wind" />

                        <TextView
                            android:id="@+id/pressure"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pressure"
                            android:textAppearance="@style/mediumTextStyle"
                            android:layout_below="@id/wind" />

                        <TextView
                            android:id="@+id/pressureTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/mediumTextStyle"
                            android:layout_below="@id/windTV"
                            tools:text="Pressure"
                            android:layout_toEndOf="@id/pressure"
                            />


                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/sunCV"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/maxMinCV"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/humidityCV">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        >

                        <TextView
                            android:id="@+id/sunrise"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/mediumTextStyle"
                            android:text="@string/sunrise"

                            />
                        <TextView
                            android:id="@+id/sunriseTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/mediumTextStyle"
                            tools:text="6.00 AM"
                            android:layout_toEndOf="@id/sunrise"

                            />

                        <TextView
                            android:id="@+id/sunset"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/sunrise"
                            android:text="@string/sunset"
                            android:textAppearance="@style/mediumTextStyle" />

                        <TextView
                            android:id="@+id/sunsetTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/sunriseTV"
                            android:layout_toEndOf="@id/sunset"
                            android:textAppearance="@style/mediumTextStyle"
                            tools:text="6:00PM" />


                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/maxMinCV"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/sunCV"

                    app:layout_constraintTop_toBottomOf="@id/windCV">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        >

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            >

                            <TextView
                                android:id="@+id/minTemp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/mediumTextStyle"
                                android:text="Min: "

                                />
                            <TextView
                                android:id="@+id/minTempTV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/mediumTextStyle"
                                tools:text="23°C"
                                android:layout_toEndOf="@id/minTemp"

                                />

                            <TextView
                                android:id="@+id/maxTemp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/minTemp"
                                android:text="Max: "
                                android:textAppearance="@style/mediumTextStyle" />

                            <TextView
                                android:id="@+id/maxTempTV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/minTempTV"
                                android:layout_toEndOf="@id/maxTemp"
                                android:textAppearance="@style/mediumTextStyle"
                                tools:text="30°C" />


                        </RelativeLayout>


                    </RelativeLayout>
                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="#ECE8E8"
                android:gravity="center"
                android:layout_weight="1">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:reverseLayout="true"
                    tools:listitem="@layout/rv_forecaster_layout" />

            </RelativeLayout>

        </LinearLayout>




    </RelativeLayout>
</layout>
